--- a/.github/workflows/funcbench.yml
+++ b/.github/workflows/funcbench.yml
@@ -33,13 +33,13 @@ jobs:
           --data '{"state":"pending","context":"funcbench-status","target_url":"'$GITHUB_STATUS_TARGET_URL'"}'
           "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$LAST_COMMIT_SHA"
       - name: Prepare nodepool
-        uses: docker://prominfra/funcbench:master
+        uses: docker://prominfra/funcbench:master@sha256:018b8d7958e4772638c8076f93dadfaaae428a9379104293370d5ba5e698d033
         with:
           entrypoint: "docker_entrypoint"
           args: make deploy
       - name: Delete all resources
         if: always()
-        uses: docker://prominfra/funcbench:master
+        uses: docker://prominfra/funcbench:master@sha256:018b8d7958e4772638c8076f93dadfaaae428a9379104293370d5ba5e698d033
         with:
           entrypoint: "docker_entrypoint"
           args: make clean
